--- a/week2_intro_to_data.rmd
+++ b/week2_intro_to_data.rmd
@@ -155,6 +155,7 @@ ggplot(data = nycflights, aes(x = dep_delay)) +
 <div id="exercise">
 **Exercise**: How do these three histograms with the various binwidths compare?
 </div>
+_In this case the shape of the distribution is better seen using 150 bins. However this number changes depending on the data we have._
 
 If we want to focus on departure delays of flights headed to RDU only, we need to
 first `filter` the data for flights headed to RDU (`dest == "RDU"`) and then make
@@ -218,8 +219,7 @@ single numerical variable are as follows:
 - `max`
 </div>
 
-We can also filter based on multiple criteria. Suppose we are interested in
-flights headed to San Francisco (SFO) in February:
+We can also filter based on multiple criteria. Suppose we are interested in flights headed to San Francisco (SFO) in February:
 
 ```{r}
 sfo_feb_flights <- nycflights %>%
@@ -230,10 +230,9 @@ Note that we can separate the conditions using commas if we want flights that
 are both headed to SFO **and** in February. If we are interested in either
 flights headed to SFO **or** in February we can use the `|` instead of the comma.
 
-1. Create a new data frame that includes flights headed to SFO in February, and save 
-this data frame as `sfo_feb_flights`. How many flights meet these criteria? 
+1. Create a new data frame that includes flights headed to SFO in February, and save this data frame as `sfo_feb_flights`. How many flights meet these criteria? 
 <ol>
-<li> 68 </li> 
+<li> *68* </li> 
 <li> 1345 </li> 
 <li> 2286 </li> 
 <li> 3563 </li>
@@ -242,7 +241,9 @@ this data frame as `sfo_feb_flights`. How many flights meet these criteria?
 
 ```{r sfo-feb-flights}
 # type your code for Question 1 here, and Knit
-
+sfo_feb_flights = nycflights %>% 
+  filter(dest == "SFO" & month == 2)
+nrow(sfo_feb_flights)
 ```
 
 
@@ -251,14 +252,16 @@ delays of `sfo_feb_flights`. Which of the following is false?
 <ol>
 <li> The distribution is unimodal. </li> 
 <li> The distribution is right skewed. </li> 
-<li> No flight is delayed more than 2 hours. </li> 
+<li> *No flight is delayed more than 2 hours.* </li> 
 <li> The distribution has several extreme values on the right side. </li>
 <li> More than 50% of flights arrive on time or earlier than scheduled. </li>
 </ol>
 
 ```{r sfo-feb-flights-arrival-delays}
 # type your code for Question 2 here, and Knit
-
+ggplot(sfo_feb_flights) +
+  geom_histogram(aes(arr_delay)) +
+  geom_vline(aes(xintercept = median(arr_delay), col ="red"))
 ```
 
 Another useful functionality is being able to quickly calculate summary 
@@ -282,13 +285,15 @@ IQR of arrival delays?
 <li> American Airlines </li> 
 <li> JetBlue Airways </li> 
 <li> Virgin America </li> 
-<li> Delta and United Airlines </li>
+<li> *Delta and United Airlines* </li>
 <li> Frontier Airlines </li>
 </ol>
 
 ```{r sfo-feb-flights-arrival-delays-carrier}
 # type your code for Question 3 here, and Knit
-
+sfo_feb_flights %>%
+  group_by(carrier) %>% 
+  summarise(iqr_arr_delay = IQR(arr_delay))
 ```
 
 ### Departure delays over months
@@ -315,14 +320,15 @@ nycflights %>%
 <ol>
 <li> January </li> 
 <li> March </li> 
-<li> July </li> 
+<li> *July* </li> 
 <li> October </li>
 <li> December </li>
 </ol>
 
 ```{r highest-avg-dep-delay-month}
 # type your code for Question 4 here, and Knit
-
+ggplot(nycflights) +
+  geom_histogram(aes(dep_delay), bins = 50)
 ```
 
 
@@ -332,12 +338,15 @@ nycflights %>%
 <li> March </li> 
 <li> July </li> 
 <li> October </li>
-<li> December </li>
+<li> *December* </li>
 </ol>
 
 ```{r highest-median-dep-delay-month}
 # type your code for Question 5 here, and Knit
-
+nycflights %>%
+  group_by(month) %>%
+  summarise(median_dd = median(dep_delay)) %>%
+  arrange(desc(median_dd))
 ```
 
 
@@ -348,7 +357,7 @@ avoid flying if you really dislike delayed flights, and why?
 <li> Mean would be more reliable as the distribution of delays is symmetric. </li> 
 <li> Median would be more reliable as the distribution of delays is skewed. </li> 
 <li> Median would be more reliable as the distribution of delays is symmetric. </li>
-<li> Both give us useful information. </li>
+<li> *Both give us useful information.* </li>
 </ol>
 
 
@@ -416,7 +425,7 @@ which NYC airport would you choose to fly out of?
 <ol>
 <li> EWR </li> 
 <li> JFK </li> 
-<li> LGA </li> 
+<li> *LGA* </li> 
 </ol>
 
 ```{r on-time-dep-perc-airport}
@@ -434,14 +443,16 @@ ggplot(data = nycflights, aes(x = origin, fill = dep_type)) +
 
 8.  Mutate the data frame so that it includes a new variable that contains the 
 average speed, `avg_speed` traveled by the plane for each flight (in mph). What is 
-the tail number of the plane with the fastest `avg_speed`? **Hint:** Average speed 
+the tail number of the plane with the fastest `avg_speed`?
+
+**Hint:** Average speed 
 can be calculated as distance divided by number of hours of travel, and note that 
 `air_time` is given in minutes. If you just want to show the `avg_speed` and 
 `tailnum` and none of the other variables, use the select function at the end of your 
 pipe to select just these two variables with `select(avg_speed, tailnum)`. You can 
 Google this tail number to find out more about the aircraft. 
 <ol>
-<li> N666DN </li> 
+<li> *N666DN* </li> 
 <li> N755US </li> 
 <li> N779JB </li> 
 <li> N947UW </li> 
@@ -450,7 +461,13 @@ Google this tail number to find out more about the aircraft.
 
 ```{r fastest-avg-speed-tailnum}
 # type your code for Question 8 here, and Knit
+nycflights = nycflights %>% 
+  mutate(avg_speed = distance/(air_time/60))
 
+nycflights %>% 
+  select(avg_speed, tailnum) %>% 
+  arrange(desc(avg_speed)) %>% 
+  slice_head(n = 5)
 ```
 
 
@@ -459,14 +476,15 @@ about the relationship between average speed and distance.
 <ol>
 <li> As distance increases the average speed of flights decreases. </li> 
 <li> The relationship is linear. </li> 
-<li> There is an overall postive association between distance and average speed.</li> 
+<li> *There is an overall postive association between distance and average speed.* </li> 
 <li> There are no outliers. </li> 
 <li> The distribution of distances are uniform over 0 to 5000 miles. </li> 
 </ol>
 
 ```{r avg-speed-dist-scatter}
 # type your code for Question 9 here, and Knit
-
+ggplot(nycflights) +
+  geom_point(aes(avg_speed, distance))
 ```
 
 
@@ -476,9 +494,15 @@ frame to create a new variable called `arr_type` with levels `"on time"` and
 `"delayed"` based on this definition. Then, determine the on time arrival percentage 
 based on whether the flight departed on time or not. What proportion of flights  that 
 were `"delayed"` departing arrive `"on time"`? 
-[NUMERIC INPUT]
 
 ```{r on-time-arr-perc}
 # type your code for Question 10 here, and Knit
+nycflights = nycflights %>% 
+  mutate(arr_type = if_else(arr_delay <= 0, "on time","delayed"))
 
+nycflights %>% 
+  group_by(dep_type) %>% 
+  summarise(arr_ontime_perc = sum(arr_type == "on time")/n())
 ```
+
+
